--- a/twapi/include/common.rc
+++ b/twapi/include/common.rc
@@ -13,7 +13,7 @@ FILETYPE VFT_DLL
             VALUE "OriginalFilename", MODULE_STR
             VALUE "CompanyName", "Ashok P. Nadkarni"
             VALUE "FileVersion", FILE_VERSION_STR
-            VALUE "LegalCopyright", "Copyright © 2012 Ashok P. Nadkarni"
+            VALUE "LegalCopyright", "Copyright © 2012-2017 Ashok P. Nadkarni"
             VALUE "ProductName", "Tcl Windows API Extension"
             VALUE "ProductVersion", PRODUCT_VERSION_STR
         }
