Update tclwinhelp for Tcl 8.6.7 and TWAPI 4.2.12

--- a/tools/h2c-tcllib-modules.cfg
+++ b/tools/h2c-tcllib-modules.cfg
@@ -41,9 +41,11 @@ toc {
     debug/debug_caller.html ""
     debug/debug_heartbeat.html ""
     debug/debug_timestamp.html ""
+    defer/defer.html ""
     des/des.html ""
     des/tcldes.html ""
     des/tcldesjr.html ""
+    dicttool/dicttool.html ""
     dns/tcllib_dns.html ""
     dns/tcllib_ip.html ""
     docstrip/docstrip.html ""
@@ -123,7 +125,6 @@ toc {
     fumagic/cfront.html ""
     fumagic/cgen.html ""
     fumagic/filetypes.html ""
-    fumagic/mimetypes.html ""
     fumagic/rtcore.html ""
     generator/generator.html ""
     gpx/gpx.html ""
@@ -170,12 +171,14 @@ toc {
     map/map_slippy_cache.html ""
     map/map_slippy_fetcher.html ""
     mapproj/mapproj.html ""
+    markdown/markdown.html ""
     math/bigfloat.html ""
     math/bignum.html ""
     math/calculus.html ""
     math/combinatorics.html ""
     math/constants.html ""
     math/decimal.html ""
+    math/exact.html ""
     math/fourier.html ""
     math/fuzzy.html ""
     math/interpolate.html ""
@@ -228,6 +231,7 @@ toc {
     pop3d/pop3d.html ""
     pop3d/pop3d_dbox.html ""
     pop3d/pop3d_udb.html ""
+    practcl/practcl.html ""
     processman/processman.html ""
     profiler/profiler.html ""
     pt/pt_astree.html ""
@@ -267,6 +271,7 @@ toc {
     pt/pt_pexpr_op.html ""
     pt/pt_pgen.html ""
     pt/pt_rdengine.html ""
+    pt/pt_tclparam_config_nx.html ""
     pt/pt_tclparam_config_snit.html ""
     pt/pt_tclparam_config_tcloo.html ""
     pt/pt_to_api.html ""
@@ -342,6 +347,10 @@ toc {
     tie/tie.html ""
     tie/tie_std.html ""
     tiff/tiff.html ""
+    tool/meta.html ""
+    tool/tool.html ""
+    tool/tool_dict_ensemble.html ""
+    tool-ui/tool-ui.html ""
     transfer/connect.html ""
     transfer/copyops.html ""
     transfer/ddest.html ""
@@ -350,7 +359,9 @@ toc {
     transfer/tqueue.html ""
     transfer/transmitter.html ""
     treeql/treeql.html ""
+    try/tcllib_throw.html ""
     try/tcllib_try.html ""
+    udpcluster/udpcluster.html ""
     uev/uevent.html ""
     uev/uevent_onidle.html ""
     units/units.html ""
@@ -406,6 +417,7 @@ toc {
     yaml/yaml.html ""
     zip/decode.html ""
     zip/encode.html ""
+    zip/mkzip.html ""
 }
 
 linkage {
