Updates to documented packages

--- a/tools/h2c-tcllib-modules.cfg
+++ b/tools/h2c-tcllib-modules.cfg
@@ -147,6 +147,7 @@ toc {
     html/html.html ""
     htmlparse/htmlparse.html ""
     http/autoproxy.html ""
+    httpd/httpd.html ""
     ident/ident.html ""
     imap4/imap4.html ""
     inifile/ini.html ""
@@ -188,6 +189,7 @@ toc {
     math/math_geometry.html ""
     math/numtheory.html ""
     math/optimize.html ""
+    math/pca.html ""
     math/polynomials.html ""
     math/qcomplex.html ""
     math/rational_funcs.html ""
@@ -215,6 +217,7 @@ toc {
     nntp/nntp.html ""
     ntp/ntp_time.html ""
     oauth/oauth.html ""
+    oometa/oometa.html ""
     ooutil/ooutil.html ""
     otp/otp.html ""
     page/page_intro.html ""
