--- a/tools/h2c-tclwinhelp.cfg
+++ b/tools/h2c-tclwinhelp.cfg
@@ -7,4 +7,5 @@ toc {
     tdbc_doc "Tcl Database Connectivity extension"
     thread_doc "Thread package"
     tdom_doc "TDOM extension"
+    sqlite3_doc "Sqlite3 extension"
 }
