--- a/tools/h2c-tdbc.cfg
+++ b/tools/h2c-tdbc.cfg
@@ -3,6 +3,7 @@ TDBC "TDBC Tcl commands"
 TdbcLib "TDBC C library"
 Tdbcmysql "TDBC MySQL driver"
 Tdbcodbc "TBDC ODBC driver"
+Tdbcpostgres "TDBC Postgres driver"
 Tdbcsqlite3 "TDBC Sqlite3 driver"
 }
 
