--- a/twapi/doc/makefile
+++ b/twapi/doc/makefile
@@ -25,6 +25,9 @@ TIDY="$(TOOLDIR)\tidy.exe"
 DTP="$(TOOLDIR)\twapi-dtp.kit"
 !ifndef HHC
 HHC="$(PROGRAMFILES)\HTML Help Workshop\hhc.exe"
+!if !exist($(HHC))
+HHC="$(PROGRAMFILES) (x86)\HTML Help Workshop\hhc.exe"
+!endif
 !endif
 
 # Documentation input files. Note this also specifies the order in the ToC
