Permit anchors to be empty and pick up text from parent. Add RBC

--- a/tools/h2c-tclwinhelp.cfg
+++ b/tools/h2c-tclwinhelp.cfg
@@ -8,4 +8,5 @@ toc {
     thread_doc "Thread package"
     tdom_doc "TDOM extension"
     sqlite3_doc "Sqlite3 extension"
+    rbc_doc "RBC Toolkit"
 }
