More tweaks to tclwinhelp

--- a/tools/h2c-tdom.cfg
+++ b/tools/h2c-tdom.cfg
@@ -1,7 +1,8 @@
 homepage file index.html
+
+# NOTE: The methods show in the toc but links do not work as they do
+# not have anchors to jump to. Only show in toc/index to take to top of page.
 linkage {
     {//h2[a!='NAME' and a!='Table Of Contents' and a!='SYNOPSIS' and a!='Category' and a!='BUGS, IDEAS, FEEDBACK' and a!='Copyright' and a!='KEYWORDS']//a[@name]} toc
-    //dt/a[@name] toc index
-    //dt/b[@class='method'] index
-    //dt/b[@class='cmd'] index
+    //dl/dt/b[@class='method'] toc index
 }
