Updated for 2019-09-09 release

--- a/tools/h2c-tdbc.cfg
+++ b/tools/h2c-tdbc.cfg
@@ -1,5 +1,5 @@
 toc {
-TDBC "TDBC Tcl commands"
+TdbcCmd "TDBC Tcl commands"
 TdbcLib "TDBC C library"
 Tdbcmysql "TDBC MySQL driver"
 Tdbcodbc "TBDC ODBC driver"
