--- a/tools/h2c-tclwinhelp.cfg
+++ b/tools/h2c-tclwinhelp.cfg
@@ -9,4 +9,5 @@ toc {
     tdom_doc "TDOM extension"
     sqlite3_doc "Sqlite3 extension"
     rbc_doc "RBC Toolkit"
+    BWman   "BWidget Toolkit"
 }
