Get rid of Sqlite3 from main ToC

--- a/tools/h2c-tdbc.cfg
+++ b/tools/h2c-tdbc.cfg
@@ -1,5 +1,5 @@
 toc {
-TdbcCmd "TDBC Tcl commands"
+TDBC "TDBC Tcl commands"
 TdbcLib "TDBC C library"
 Tdbcmysql "TDBC MySQL driver"
 Tdbcodbc "TBDC ODBC driver"
