Fix tklib module configs

--- a/tools/h2c-tklib.cfg
+++ b/tools/h2c-tklib.cfg
@@ -1,3 +1,10 @@
+homepage file toc0.html
+
+toc {
+tklib/files/apps Applications
+tklib/files/modules Modules
+}
+
 linkage {
     {//h2[a!='Name' and a!='Table Of Contents' and a!='Synopsis' and a!='Category' and a!='BUGS, IDEAS, FEEDBACK' and a!='Copyright' and a!='Keywords']//a[@name]} toc
     //dt/a[@name] toc index
